--- a/Exercicios/cap(022)/index(002).html
+++ b/Exercicios/cap(022)/index(002).html
@@ -14,9 +14,9 @@
 <body>
     <h1>Teste com iframes</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, impedit. Et possimus maiores, ab obcaecati laborum eum expedita mollitia, placeat magnam provident ipsam, ducimus cumque autem veniam tempore aut doloremque nihil tenetur nesciunt repellendus optio perspiciatis. Doloremque incidunt voluptates veritatis distinctio libero dolore modi harum in, commodi laborum animi minima!</p>
-    <iframe src="index(003).html" height="310px"
+    <iframe src="" height="310px"
     width="600px%">
-        <p>Tabela para estudos.</p>
+        <p>[ Tabela de Notas ]</p>
     </iframe>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, earum dicta deserunt impedit commodi assumenda tenetur blanditiis placeat ipsam molestiae? Quas sapiente quo officia sunt. Repudiandae, veritatis quos. Necessitatibus magnam quia error soluta ea possimus, odit ut molestiae. Quia molestias voluptatem, blanditiis cupiditate unde tempore assumenda iste minima, perferendis nemo, ex vel. Quam voluptatibus quos obcaecati sed ea perferendis nulla. Iure vel ullam, accusamus praesentium delectus dignissimos sunt libero aliquid, cum earum, consequuntur ad sequi.</p>
 </body>
