--- a/Exercicios/cap(022)/index.html
+++ b/Exercicios/cap(022)/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos dos Iframes - 1</title>
     <style>
+        body {
+            text-align: center;
+        }
         iframe {
             border: 4px groove rgb(133, 125, 125);
             height: 400px;
