--- a/Exercicios/cap(022)/index(006).html
+++ b/Exercicios/cap(022)/index(006).html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe - 6</title>
     <style>
-        
+        body {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    
+    <h1>Cadraste-se aqui</h1>
+    <form action="cadastro.php" method="get">
+        <p>
+            <label for="nome">Nome: </label>
+            <input type="text" name="nome" id="nome" placeholder="Apenas letras">
+            <input type="submit" value="Cadastrar">
+        </p>
+    </form>
 </body>
 </html>
