--- a/Exercicios/cap(022)/index(008).html
+++ b/Exercicios/cap(022)/index(008).html
@@ -6,6 +6,12 @@
     <title>Estudos de Iframe - 8</title>
 </head>
 <body>
-    
+    <div onclick="issoai()" style="text-align: center;">
+    <p>Clica em mim moreno!!!</p></div>
+    <script>
+        function issoai() {
+            window.alert("AI MEU BUMBUM!!!")
+        }
+    </script>
 </body>
 </html>
