--- a/Exercicios/cap(022)/index(009).html
+++ b/Exercicios/cap(022)/index(009).html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe - 9</title>
+    <style>
+        iframe {
+            display: block;
+            border: 1px solid black;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
-    
+    <iframe src="index(008).html" height="300px" width="300px" sandbox="sandbox" referrerpolicy="no-referrer">
+        Teu pc ou cell é uma batata hein
+    </iframe>
 </body>
 </html>
