--- a/Desafios/Desaf(001)/index.html
+++ b/Desafios/Desaf(001)/index.html
@@ -13,12 +13,24 @@
             [ ERRO: Conteudo inconpativel ]
         </iframe>
         <nav>
-            <a href="index(001).html" target="iframo"><img src="pacote-d013/pacote-d013/imagens/logo-home.jpg" alt="Inicio"></a>
-            <a href=""><img src="pacote-d013/pacote-d013/imagens/logo-youtube.jpg" alt="Youtube"></a>
-            <a href=""><img src="pacote-d013/pacote-d013/imagens/logo-github.jpg" alt="github"></a>
-            <a href=""><img src="pacote-d013/pacote-d013/imagens/logo-home.jpg" alt="Instagram"></a>
-            <a href=""><img src="pacote-d013/pacote-d013/imagens/logo-twitter.jpg" alt="Twiiter"></a>
-            <a href=""><img src="pacote-d013/pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="index(001).html" target="iframo">
+                <abbr title="Home"><img src="pacote-d013/pacote-d013/imagens/logo-home.jpg" alt="Inicio"></abbr>
+            </a>
+            <a href="index(002).html" target="iframo">
+                <abbr title="Yourtoba"><img src="pacote-d013/pacote-d013/imagens/logo-youtube.jpg" alt="Youtube"></abbr>
+            </a>
+            <a href="index(003).html" target="iframo">
+                <abbr title="Github"><img src="pacote-d013/pacote-d013/imagens/logo-github.jpg" alt="github"></abbr>
+            </a>
+            <a href="index(004).html" target="iframo">
+                <abbr title="Instagram"><img src="pacote-d013/pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"></abbr>
+            </a>
+            <a href="index(005).html" target="iframo">
+                <abbr title="Corre!"><img src="pacote-d013/pacote-d013/imagens/logo-twitter.jpg" alt="Twiiter"></abbr>
+            </a>
+            <a href="index(006).html" target="iframo">
+                <abbr title="Facebook"><img src="pacote-d013/pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></abbr>
+            </a>
         </nav>
     </main>
 </body>
