--- a/Desafios/Desaf(002)/index(006).html
+++ b/Desafios/Desaf(002)/index(006).html
@@ -10,7 +10,7 @@
             padding: 0px;
         }
         body {
-            background: url("imagens/pudimcara.jpeg") no-repeat center fixed;
+            background: url("imagens/jujuba.jpg") no-repeat center fixed;
             background-size: cover;
         }
     </style>
