--- a/Desafios/Desaf(002)/index.html
+++ b/Desafios/Desaf(002)/index.html
@@ -23,10 +23,13 @@
                 <abbr title="Pudim"><img src="imagens/Pudim.png" alt="github"></abbr>
             </a>
             <a href="index(004).html" target="iframo">
-                <abbr title="Lili ou Melina"><img src="imagens/Lili.jpg" alt="Instagram"></abbr>
+                <abbr title="Lili ou Melina"><img src="imagens/Li.jpg" alt="Instagram"></abbr>
             </a>
             <a href="index(005).html" target="iframo">
-                <abbr title="Léu"><img src="imagens/Leo.jpg" alt="Twiiter"></abbr>
+                <abbr title="Léu"><img src="imagens/L.jpg" alt="Twiiter"></abbr>
+            </a>
+            <a href="index(006).html" target="iframo">
+                <abbr title="Jujuba"><img src="imagens/J.jpg" alt="Twiiter"></abbr>
             </a>
         </nav>
     </main>
