--- a/Desafios/Desaf(002)/index(002).html
+++ b/Desafios/Desaf(002)/index(002).html
@@ -10,7 +10,7 @@
             padding: 0px;
         }
         body {
-            background: url("imagens/WhatsApp\ Image\ 2024-03-12\ at\ 15.46.02.jpeg") no-repeat center fixed;
+            background: url("imagens/apolocara.jpeg") no-repeat center fixed;
             background-size: cover;
         }
     </style>
