--- a/Desafios/Desaf(002)/index.html
+++ b/Desafios/Desaf(002)/index.html
@@ -29,9 +29,10 @@
                 <abbr title="Léu"><img src="imagens/L.jpg" alt="Twiiter"></abbr>
             </a>
             <a href="index(006).html" target="iframo">
-                <abbr title="Jujuba"><img src="imagens/J.jpg" alt="Twiiter"></abbr>
+                <abbr title="Jujuba"><img src="imagens/Jotão.jpg" alt="Twiiter"></abbr>
             </a>
         </nav>
+        <p>Feito por Pedro Pikasso. 👍</p>
     </main>
 </body>
 </html>
