--- a/Desafios/Desaf(002)/index.html
+++ b/Desafios/Desaf(002)/index.html
@@ -32,7 +32,7 @@
                 <abbr title="Jujuba"><img src="imagens/Jotão.jpg" alt="Twiiter"></abbr>
             </a>
         </nav>
-        <p>Feito por Pedro Pikasso. 👍</p>
+        <p>Feito por Pedro para seus lindos gatos. 👍</p>
     </main>
 </body>
 </html>
