--- a/Desafios/Desaf(002)/index.html
+++ b/Desafios/Desaf(002)/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <iframe name="iframo" src="index(home).html">
+        <iframe name="iframo"  src="index(home).html" sandbox="sandbox">
             [ ERRO: Conteudo inconpativel ]
         </iframe>
         <nav>
