--- a/Exercicios/cap(023)/index.html
+++ b/Exercicios/cap(023)/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Meu primeiro formularios</h1>
-    <form action="cadastro.php" autocomplete="off">
+    <form action="cadastro.php" method="post" autocomplete="off">
         <p>
             <label for="inome">
                 Nome:
