--- a/Exercicios/cap(023)/index(001).html
+++ b/Exercicios/cap(023)/index(001).html
@@ -40,6 +40,16 @@
     </style>
 </head>
 <body>
+    <!--
+        Novos Parametros
+
+        Required: impedi que o usuario envie dado com um input vazio
+        Maxlength: impõe uma quantidade maxima de letras que podem ser postas no input 
+        Minlength: impõe uma quantidade minima de letras que podem ser postas no input 
+        Size: Define até quantas letras aparecerá no input. Ex: size="5" / 12345... 
+        Placeholder: Põe um texto dentro do input que desaparece ao ser posto algum dado no mesmo
+        autocomplete ( no input / é necessario que esteja ativo para fucionar ): especifica as recomendações que irão aparecer  
+    -->
     <h1>Formulario comum</h1>
     <form action="cadastro.php" method="post" autocomplete="on">
         <p>
