--- a/Exercicios/cap(023)/index(004).html
+++ b/Exercicios/cap(023)/index(004).html
@@ -37,19 +37,19 @@
         Fieldset: põe uma borda ao redor dos elementos filhos do mesmo.
         Legend: Põe um texto que pode ser considerado o título do Fieldset caso seja colocado dentro de uma tag Fieldset, caso seja colocado fora aparecera como um texto normal.
     -->
-    <form action="cadastro.php" autocomplete="on">
+    <form autocomplete="on">
         <fieldset>
         <legend>E-mail</legend>
         <p>
             E-mail:
             <label for="idemail">  
-            <input type="email" name="email" id="idemail" required autocomplete="email">
+            <input type="email" name="email" id="idemail"  autocomplete="email">
         </label>
         </p>
         <p>
             Telefone:
             <label for="idtel">
-            <input type="tel" name="tel" id="idtel" required pattern="/([0-9]{4})[-]([0-9]{4})/g" placeholder="XXXX-XXXX">
+            <input type="tel" name="tel" id="idtel" required pattern="" title="ERRO" placeholder="XXXX-XXXX">
             </label>
         </p>
         <p id="this">
