--- a/Exercicios/cap(023)/index(004).html
+++ b/Exercicios/cap(023)/index(004).html
@@ -41,15 +41,15 @@
         <fieldset>
         <legend>E-mail</legend>
         <p>
-            E-mail:
             <label for="idemail">  
-            <input type="email" name="email" id="idemail"  autocomplete="email">
-        </label>
+                E-mail:
+                <input type="email" name="email" id="idemail"  autocomplete="email" >
+            </label>
         </p>
         <p>
-            Telefone:
             <label for="idtel">
-            <input type="tel" name="tel" id="idtel" required pattern="" title="ERRO" placeholder="XXXX-XXXX">
+                Telefone:
+                <input type="tel" name="tel" id="idtel" maxlength="15" minlength="15" placeholder="(XX) XXXXX-XXXX" pattern="^(\([0-9]{2}\))\s([0-9])([0-9]{4})\-([0-9]{4})$" >
             </label>
         </p>
         <p id="this">
